--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,8 @@ Werkzeug==1.0.1
 keras==2.3.1
 scikit-learn==0.22.1
 pandas==1.0.1
-Pillow==9.0.1
+Pillow>=8.1.1
 pybase64==1.0.1
 numpy==1.18.1
 regex==2020.6.8
-tensorflow==2.8.0
+tensorflow>=2.4.0
