--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,6 @@ scikit-learn==0.22.1
 pandas==1.0.1
 Pillow==9.0.1
 pybase64==1.0.1
-numpy==1.18.1
+numpy>=1.11.0
 regex==2020.6.8
 tensorflow==2.8.0
